@@ -1,110 +1,108 @@
 package com.cougarmaps.service;
 
 import com.cougarmaps.Constants;
+import com.cougarmaps.data.ElevatorCsvDAO;
+import com.cougarmaps.model.graph.Graph;
+import com.cougarmaps.model.graph.Node;
+import com.cougarmaps.model.graph.enums.NodeStatus;
+import com.cougarmaps.model.graph.enums.NodeType;
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
 import org.jsoup.nodes.Element;
 import org.jsoup.select.Elements;
 
-import java.io.*;
+import java.io.IOException;
 import java.util.*;
 
+/**
+ * Checks the current status of elevators from a remote source and updates the graph
+ * by marking out-of-service elevators as INACTIVE.
+ */
 public class ElevatorStatusChecker {
+    private final ElevatorCsvDAO elevatorCsvDAO;
+    private final String elevatorStatusUrl;
 
-    /**
-     * Fetches a list of Node IDs corresponding to elevators that are currently out of service.
-     * @return List of node IDs to disable
-     */
-    public static List<Integer> getOutOfServiceNodeIds() {
-        List<Integer> outOfServiceNodeIds = new ArrayList<>();
-        List<String> outOfServiceElevators = fetchOutOfServiceElevators();
-        Map<String, Integer> elevatorNameToNodeId = loadElevatorMappings();
-
-        for (String elevatorName : outOfServiceElevators) {
-            Integer nodeId = elevatorNameToNodeId.get(elevatorName);
-            if (nodeId != null) {
-                outOfServiceNodeIds.add(nodeId);
-            } else {
-                System.err.println("⚠️ No mapping found for elevator: " + elevatorName);
-            }
-        }
-
-        return outOfServiceNodeIds;
+    public ElevatorStatusChecker(ElevatorCsvDAO dao, String statusUrl) {
+        this.elevatorCsvDAO = dao;
+        this.elevatorStatusUrl = statusUrl;
     }
 
     /**
-     * Fetches the list of elevators currently marked as out of service on the CSUSM website.
-     * @return List of elevator names (like "ADM ELEVATOR 5")
+     * Updates the provided graph by resetting all elevators to ACTIVE and marking
+     * the ones found on the out-of-service list as INACTIVE.
+     *
+     * @param graph The graph containing elevator nodes to be updated.
      */
-    private static List<String> fetchOutOfServiceElevators() {
-        List<String> outOfServiceElevators = new ArrayList<>();
+    public void markOutOfServiceElevators(Graph graph) {
+        List<String> outOfServiceNames = fetchOutOfServiceElevators();
+        Map<String, Integer> nameToId = elevatorCsvDAO.loadElevatorMappings();
+
+        // Set all elevator nodes to ACTIVE
+        for (Node node : graph.getAllNodes()) {
+            if (node.getType() == NodeType.ELEVATOR) {
+                node.setStatus(NodeStatus.ACTIVE);
+            }
+        }
+
+        // Mark out-of-service elevators as INACTIVE
+        for (String name : outOfServiceNames) {
+            Integer nodeId = nameToId.get(name);
+            if (nodeId != null) {
+                Node node = graph.getNodeById(String.valueOf(nodeId));
+                if (node != null) {
+                    node.setStatus(NodeStatus.INACTIVE);
+                }
+            }
+        }
+
+        // Debug output
+        if (Constants.DEBUG) {
+            System.out.println("  Loading Elevators Status:");
+            for (String name : outOfServiceNames) {
+                System.out.println("    " + name + ":⚠️");
+            }
+        }
+    }
+
+    /**
+     * Scrapes the elevator status webpage and extracts the names of elevators currently out of service.
+     *
+     * @return A list of elevator names (as shown on the website) that are out of service.
+     */
+    private List<String> fetchOutOfServiceElevators() {
+        List<String> names = new ArrayList<>();
 
         try {
-            Document doc = Jsoup.connect(Constants.ELEVATOR_STATUS_URL).get();
+            Document doc = Jsoup.connect(elevatorStatusUrl).get();
             Element header = doc.selectFirst("h1:contains(Out of Service Elevators)");
             if (header != null) {
                 Element table = header.nextElementSibling();
                 if (table != null && table.tagName().equals("table")) {
-                    Elements rows = table.select("tr");
-                    for (Element row : rows) {
+                    for (Element row : table.select("tr")) {
                         Elements cols = row.select("td");
                         if (!cols.isEmpty()) {
-                            String fullDescription = cols.getFirst().text();
-                            String elevatorName = extractElevatorName(fullDescription);
-                            if (elevatorName != null) {
-                                outOfServiceElevators.add(elevatorName);
-                            }
+                            String full = cols.get(0).text();
+                            String name = extractElevatorName(full);
+                            if (name != null) names.add(name);
                         }
                     }
-                } else {
-                    System.err.println("⚠️ Could not find the 'Out of Service Elevators' table.");
-                }
-            } else {
-                System.err.println("⚠️ Could not find 'Out of Service Elevators' header.");
-            }
-
-        } catch (IOException e) {
-            System.err.println("Failed to fetch elevator status: " + e.getMessage());
-        }
-
-        return outOfServiceElevators;
-    }
-
-    /**
-     * Loads elevator name-to-nodeId mappings from elevators.csv
-     * @return Map where key = elevator name, value = node ID
-     */
-    private static Map<String, Integer> loadElevatorMappings() {
-        Map<String, Integer> map = new HashMap<>();
-
-        try (BufferedReader reader = new BufferedReader(new FileReader(Constants.ELEVATOR_CSV_PATH))) {
-            reader.readLine();
-            String line; // Skip header
-            while ((line = reader.readLine()) != null) {
-                if (line.trim().isEmpty()) continue;
-                String[] tokens = line.split(",");
-                if (tokens.length >= 2) {
-                    int nodeId = Integer.parseInt(tokens[0].trim());
-                    String elevatorName = tokens[1].trim();
-                    map.put(elevatorName, nodeId);
                 }
             }
         } catch (IOException e) {
-            System.err.println("Failed to load elevator mappings: " + e.getMessage());
+            System.err.println("❌ Failed to fetch elevator status: " + e.getMessage());
         }
 
-        return map;
+        return names;
     }
 
     /**
-     * Helper to extract the short elevator name after the dash.
-     * Example: "Administrative Building - ADM ELEVATOR 5" ➔ "ADM ELEVATOR 5"
+     * Extracts the elevator name from a full string.
+     *
+     * @param full The full string containing the elevator information.
+     * @return The extracted elevator name, or null if not found.
      */
-    private static String extractElevatorName(String fullDescription) {
-        int dashIndex = fullDescription.indexOf("-");
-        if (dashIndex >= 0 && dashIndex + 1 < fullDescription.length()) {
-            return fullDescription.substring(dashIndex + 1).trim();
-        }
-        return null;
+    private String extractElevatorName(String full) {
+        int dash = full.indexOf("-");
+        return (dash >= 0 && dash + 1 < full.length()) ? full.substring(dash + 1).trim() : null;
     }
 }
